# aws-c-cal

./: .gitignore  CMakeLists.txt  NOTICE  README.md  build-deps.sh  builder.json  format-check.sh  hex_array.c
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  codecov.yml
cmake/: aws-c-cal-config.cmake  aws-c-cal-config.cmake.in
cmake/modules/: FindLibCrypto.cmake  FindLibCryptoCAL.cmake  Findcrypto.cmake  aws-lc.cmake
codebuild/: common-posix.sh  common-windows.bat  linux-gcc-4x-x86.yml
ecdsa-fuzz-corpus/darwin/: p256_sig_corpus.txt
ecdsa-fuzz-corpus/windows/: p256_sig_corpus.txt
include/aws/cal/: cal.h  crc32.h  der.h  ecc.h  ed25519.h  exports.h  hash.h  hkdf.h  hmac.h  rsa.h  symmetric_cipher.h
include/aws/cal/private/: der.h  ecc.h  opensslcrypto_common.h  rsa.h  symmetric_cipher_priv.h
include/aws/cal/private/darwin/: common_cryptor_spi.h
sample/: CMakeLists.txt  main.c
source/: cal.c  crc32.c  der.c  ecc.c  ed25519.c  hash.c  hkdf.c  hmac.c  rsa.c  symmetric_cipher.c
source/bcrypt/: bcrypt_ecc.c  bcrypt_hash.c  bcrypt_hmac.c  md5.c  sha256.c  sha256_hmac.c
source/commoncrypto/: commoncrypto_ecc.c  commoncrypto_hmac.c  commoncrypto_md5.c  commoncrypto_sha256.c  md5.c  sha256.c  sha256_hmac.c
source/darwin/: commoncrypto_aes.c  commoncrypto_hmac.c  commoncrypto_platform_init.c  commoncrypto_sha1.c  commoncrypto_sha256.c  commoncrypto_sha512.c  securityframework_ecc.c  securityframework_rsa.c
source/opensslcrypto/: md5.c  opensslcrypto_ecc.c  opensslcrypto_hash.c  opensslcrypto_hmac.c  sha256.c  sha256_hmac.c
source/shared/: ed25519-lc.c  ed25519-noop.c  ed25519.c  ed25519_lc.c  ed25519_noop.c  lccrypto_common.c  ref_hkdf.c
source/unix/: openssl_aes.c  openssl_hkdf.c  openssl_platform_init.c  openssl_rsa.c  opensslcrypto_common.h  opensslcrypto_ecc.c  opensslcrypto_hash.c  opensslcrypto_hmac.c
source/windows/: bcrypt_aes.c  bcrypt_ecc.c  bcrypt_hash.c  bcrypt_hmac.c  bcrypt_platform_init.c  bcrypt_rsa.c
tests/: CMakeLists.txt  aes256_test.c  crc_test.c  der_test.c  ecc_test.c  ed25519_test.c  hkdf_test.c  md5_test.c  misc_test.c  rsa_test.c  sha1_test.c  sha256_hmac_test.c  sha256_test.c  sha512_hmac_test.c  sha512_test.c  symmetric_cipher_test.c  test_case_helper.h
